--- a/tictactoe.css
+++ b/tictactoe.css
@@ -12,7 +12,7 @@ hr {
 #board {
   width: 450px;
   height: 450px;
-  background-color: yellow;
+  /* background-color: yellow; */
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
